Bugs and redundant diffs